tests/fail/union.rs
use beerec_variants::Variants;

#[derive(Variants)]
pub union Union {
    field: usize,
}

fn main() {}
